--- a/wp-content/themes/lcie/sass/modules/_header.scss
+++ b/wp-content/themes/lcie/sass/modules/_header.scss
@@ -127,7 +127,7 @@
 	background-size: 20px;
 	background-repeat: no-repeat;
 	background-position: center;
-	text-indent: 9999px;
+	/*text-indent: 9999px;*/
 	padding: 0 !important;
 	position: relative;
 	top: -5px;
@@ -288,6 +288,7 @@
 		text-align: left;
 		margin-bottom: 10px;
 		padding-left: 0;
+
 	}
 
 	.header__subnavigation
