--- a/wp-content/themes/lcie/sass/modules/_homepage.scss
+++ b/wp-content/themes/lcie/sass/modules/_homepage.scss
@@ -158,7 +158,7 @@
 
 .home__teams__grid__col__readmore
 {
-	@include primary_font(1.0rem, 400);
+	@include primary_font(1.0rem, 500);
 	color: white;
 	text-decoration: none;
 	position: absolute;
